--- a/hadoop/spark.ipynb
+++ b/hadoop/spark.ipynb
@@ -40,9 +40,15 @@
     "---\n",
     "\n",
     "## 4. What is the difference between a Session and a Context?\n",
-    "- **SparkContext**: Responsible for managing Spark’s core functionality, like job execution, creating RDDs, and managing distributed resources.\n",
-    "- **SparkSession**: A unified entry point for working with structured data (DataFrames, SQL). It includes SparkContext and supports higher-level APIs such as DataFrame operations, SQL queries, and machine learning tasks.\n",
-    "- **In short**: SparkSession combines the features of SparkContext and provides additional capabilities for working with structured data.\n",
+    "- **SparkContext**: for `old` version Spark 1.x\n",
+    "\n",
+    "      managing functionality:\n",
+    "      - like `job execution`, \n",
+    "      - creating `RDDs`, \n",
+    "      - and managing distributed resources.\n",
+    "- **SparkSession**: for `new` version Spark 2.x\n",
+    "      - A unified entry point for working with `structured data (DataFrames, SQL)`. \n",
+    "      - It `includes SparkContext` and supports `higher-level APIs` such as DataFrame operations, SQL queries, and machine learning tasks.\n",
     "\n",
     "---\n",
     "\n",
@@ -55,29 +61,33 @@
     "\n",
     "---\n",
     "\n",
-    "## 6. For each of the following modules/classes, explain what is its purpose and its advantages:\n",
+    "## **6. For each of the following modules/classes, explain what is its purpose and its advantages:**\n",
     "\n",
-    "- **RDD**:\n",
-    "  - Purpose: A distributed collection of data processed in parallel.\n",
-    "  - Advantages: Fault tolerance, parallel processing, and immutability.\n",
+    "#### **RDD**: \n",
+    "  - **Purpose**: \n",
+    "    * A distributed collection of `data processed in parallel`.\n",
+    "    * `unstrucured data`\n",
+    "    * provide `low-level API` like map, reduce\n",
     "\n",
-    "- **DataFrame and SQL**:\n",
+    "  - Advantages: `Fault tolerance`, `parallel processing`, and `immutability`\n",
+    "\n",
+    "#### **DataFrame and SQL**:\n",
     "  - Purpose: Structured data representation (like a table in a database). DataFrame provides a higher-level abstraction for working with distributed data.\n",
     "  - Advantages: Optimized query execution, supports SQL queries, and integrates with Spark’s ecosystem for machine learning and analytics.\n",
     "\n",
-    "- **Streaming**:\n",
+    "#### **Streaming**:\n",
     "  - Purpose: Real-time data processing (Spark Streaming).\n",
     "  - Advantages: Continuous data processing, easy integration with other systems, and support for complex event processing.\n",
     "\n",
-    "- **MLlib**:\n",
+    "#### **MLlib**:\n",
     "  - Purpose: Machine learning library for scalable algorithms (e.g., classification, regression).\n",
     "  - Advantages: Distributed machine learning, supports multiple algorithms, and integrates with Spark’s ecosystem.\n",
     "\n",
-    "- **GraphFrames**:\n",
+    "#### **GraphFrames**:\n",
     "  - Purpose: A library for working with graphs and performing graph processing.\n",
     "  - Advantages: Provides optimized graph algorithms and integrates seamlessly with DataFrames.\n",
     "\n",
-    "- **Resource**:\n",
+    "#### **Resource**:\n",
     "  - Purpose: Manages and allocates resources (e.g., memory, CPU) in a Spark cluster.\n",
     "  - Advantages: Efficient resource utilization, fault tolerance, and scaling.\n",
     "\n",
