question 12 done & exo 2.e

--- a/hadoop/spark.ipynb
+++ b/hadoop/spark.ipynb
@@ -95,14 +95,15 @@
     "\n",
     "## 7. What is the difference between a Spark DataFrame and a Pandas DataFrame?\n",
     "- **Spark DataFrame**:\n",
-    "  - Distributed across a cluster, capable of handling large-scale data.\n",
-    "  - Optimized for distributed computations and fault tolerance.\n",
-    "  - Supports operations on distributed data with APIs in Spark.\n",
+    "  - `Distributed` across a cluster, capable of handling large-scale data.\n",
+    "  - `Lazy Execution`\n",
+    "  - `SQL Integration`\n",
+    "  - `Parallel Execution`\n",
+    "  - `Real-time` Analytics, allow `data streaming`\n",
     "\n",
     "- **Pandas DataFrame**:\n",
-    "  - Stored in memory on a single machine.\n",
-    "  - Best for small datasets that can fit into the machine's memory.\n",
-    "  - Provides high-level data manipulation functions for Python.\n",
+    "  - `high-level` data manipulation functions for Python.\n",
+    "  - `Index-Based` Operations: Uses row and column indexing\n",
     "\n",
     "---\n",
     "\n",
@@ -118,35 +119,127 @@
     "\n",
     "## 9. What is the difference between a transformation and an action?\n",
     "- **Transformation**:\n",
-    "  - Lazy operations that return a new RDD/DataFrame (e.g., `map`, `filter`).\n",
-    "  - They are not executed immediately; Spark builds a DAG (Directed Acyclic Graph) and only executes when an action is called.\n",
+    "  - `Lazy operations` that return a new RDD/DataFrame (e.g., `map`, `filter`).\n",
     "\n",
     "- **Action**:\n",
-    "  - Triggers execution of the transformations to compute the result (e.g., `collect`, `count`, `save`).\n",
-    "  - Forces Spark to perform the actual computation.\n",
+    "  - `eager evaluation` compute the result (e.g., `collect`, `count`, `save`).\n",
     "\n",
     "---\n",
     "\n",
     "## 10. What are the advantages of laziness?\n",
-    "- **Optimized execution**: Spark optimizes the entire DAG of operations before running them.\n",
-    "- **Reduced unnecessary computation**: Only the necessary transformations are computed when an action is triggered.\n",
-    "- **Improved performance**: Avoids intermediate computations and minimizes data shuffling.\n",
-    "\n",
+    "- `Optimized execution`: combine all transformations to be performed as a single\n",
+    "- `Fault tolerance`: spark will recompute lost partition from already loaded dataset\n",
+    "- Spark only executes when necessary, `reducing memory` and CPU usage.\n",
     "---\n",
     "\n",
     "## 11. When is a shuffle operation needed?\n",
     "A **shuffle** occurs when:\n",
-    "- Data needs to be redistributed across partitions.\n",
+    "- `Data needs to be redistributed` across partitions.\n",
     "- This happens in operations like **groupBy**, **reduceByKey**, or **join**.\n",
-    "- Shuffling is expensive and can impact performance due to data transfer and disk I/O.\n",
+    "- `Shuffling is expensive` and can impact performance due to data transfer and disk I/O.\n",
     "\n",
     "---\n",
     "\n",
     "## 12. Explain `explain`.\n",
-    "`explain()` is a method in Spark that outputs the logical and physical plan of a DataFrame or RDD. It shows how Spark plans to execute the computation, including stages, tasks, and optimizations (like predicate pushdown). It helps with performance tuning by understanding query execution.\n",
+    "explain() show:\n",
+    "- `Physical plan` i.e. low lvl (sort, shuffle)\n",
+    "- `Logical plan`  i.e. High lvl action (filter, groupby etc)\n",
+    "- `Optimized Logical Plan` with rearrangement of action to\n",
+    "  * **reduce data shuffling**\n",
+    "  * **pushing down filter and projection**\n",
+    "  * **Choosing efficient join strategies**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+----------+\n",
+      "|department|avg_salary|\n",
+      "+----------+----------+\n",
+      "|        IT|    2750.0|\n",
+      "|   Finance|    2700.0|\n",
+      "+----------+----------+\n",
+      "\n",
+      "== Parsed Logical Plan ==\n",
+      "'Sort ['avg_salary DESC NULLS LAST], true\n",
+      "+- Aggregate [department#14], [department#14, avg(salary#15L) AS avg_salary#25]\n",
+      "   +- Filter (salary#15L > cast(2200 as bigint))\n",
+      "      +- LogicalRDD [id#12L, name#13, department#14, salary#15L], false\n",
+      "\n",
+      "== Analyzed Logical Plan ==\n",
+      "department: string, avg_salary: double\n",
+      "Sort [avg_salary#25 DESC NULLS LAST], true\n",
+      "+- Aggregate [department#14], [department#14, avg(salary#15L) AS avg_salary#25]\n",
+      "   +- Filter (salary#15L > cast(2200 as bigint))\n",
+      "      +- LogicalRDD [id#12L, name#13, department#14, salary#15L], false\n",
+      "\n",
+      "== Optimized Logical Plan ==\n",
+      "Sort [avg_salary#25 DESC NULLS LAST], true\n",
+      "+- Aggregate [department#14], [department#14, avg(salary#15L) AS avg_salary#25]\n",
+      "   +- Project [department#14, salary#15L]\n",
+      "      +- Filter (isnotnull(salary#15L) AND (salary#15L > 2200))\n",
+      "         +- LogicalRDD [id#12L, name#13, department#14, salary#15L], false\n",
+      "\n",
+      "== Physical Plan ==\n",
+      "AdaptiveSparkPlan isFinalPlan=false\n",
+      "+- Sort [avg_salary#25 DESC NULLS LAST], true, 0\n",
+      "   +- Exchange rangepartitioning(avg_salary#25 DESC NULLS LAST, 200), ENSURE_REQUIREMENTS, [plan_id=101]\n",
+      "      +- HashAggregate(keys=[department#14], functions=[avg(salary#15L)], output=[department#14, avg_salary#25])\n",
+      "         +- Exchange hashpartitioning(department#14, 200), ENSURE_REQUIREMENTS, [plan_id=98]\n",
+      "            +- HashAggregate(keys=[department#14], functions=[partial_avg(salary#15L)], output=[department#14, sum#36, count#37L])\n",
+      "               +- Project [department#14, salary#15L]\n",
+      "                  +- Filter (isnotnull(salary#15L) AND (salary#15L > 2200))\n",
+      "                     +- Scan ExistingRDD[id#12L,name#13,department#14,salary#15L]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pyspark.sql import SparkSession\n",
+    "from pyspark.sql.functions import col, avg, count, desc\n",
     "\n",
-    "---\n",
+    "# Initialize Spark\n",
+    "spark = SparkSession.builder.appName(\"ExplainExample\").getOrCreate()\n",
     "\n",
+    "# Create DataFrame\n",
+    "data = [\n",
+    "    (1, \"Alice\", \"HR\", 2000),\n",
+    "    (2, \"Bob\", \"IT\", 2500),\n",
+    "    (3, \"Charlie\", \"IT\", 3000),\n",
+    "    (4, \"David\", \"HR\", 2200),\n",
+    "    (5, \"Eve\", \"Finance\", 2700),\n",
+    "]\n",
+    "columns = [\"id\", \"name\", \"department\", \"salary\"]\n",
+    "df = spark.createDataFrame(data, columns)\n",
+    "\n",
+    "# 🔹 Transformations (Lazy)\n",
+    "df_filtered = df.filter(col(\"salary\") > 2200)  # Filter rows\n",
+    "df_grouped = df_filtered.groupBy(\"department\").agg(avg(\"salary\").alias(\"avg_salary\"))  # Aggregate\n",
+    "df_sorted = df_grouped.orderBy(desc(\"avg_salary\"))  # Sort results\n",
+    "\n",
+    "# 🔹 Action (Triggers execution)\n",
+    "df_sorted.show()\n",
+    "\n",
+    "df_sorted.explain(True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 13. What is the importance of repartition?\n",
     "Repartitioning redistributes data across partitions, which can:\n",
     "- **Improve performance**: By balancing the data across nodes, reducing skew.\n",
@@ -195,18 +288,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
