--- a/hadoop/spark/spark_ex.ipynb
+++ b/hadoop/spark/spark_ex.ipynb
@@ -14,27 +14,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+---+------------+--------+---------+-------+-------+-------+----+--------+---+-----+--------+--------+-----+--------+--------+-------+\n",
-      "|age|job         |marital |education|default|balance|housing|loan|contact |day|month|duration|campaign|pdays|previous|poutcome|deposit|\n",
-      "+---+------------+--------+---------+-------+-------+-------+----+--------+---+-----+--------+--------+-----+--------+--------+-------+\n",
-      "|52 |admin.      |married |secondary|no     |1113   |no     |yes |cellular|8  |jul  |83      |1       |-1   |0       |unknown |no     |\n",
-      "|26 |management  |single  |tertiary |no     |1094   |yes    |no  |cellular|8  |sep  |137     |1       |-1   |0       |unknown |yes    |\n",
-      "|27 |technician  |single  |secondary|yes    |0      |no     |yes |cellular|8  |jul  |732     |1       |-1   |0       |unknown |yes    |\n",
-      "|49 |admin.      |married |secondary|no     |167    |no     |yes |cellular|9  |jul  |51      |1       |-1   |0       |unknown |no     |\n",
-      "|33 |management  |single  |tertiary |no     |224    |no     |no  |cellular|23 |jun  |342     |2       |107  |2       |success |yes    |\n",
-      "|59 |retired     |divorced|primary  |no     |81     |yes    |no  |unknown |5  |may  |107     |1       |-1   |0       |unknown |no     |\n",
-      "|49 |blue-collar |married |secondary|no     |30     |yes    |no  |unknown |5  |may  |135     |4       |-1   |0       |unknown |no     |\n",
-      "|34 |blue-collar |divorced|secondary|no     |1125   |yes    |yes |cellular|19 |nov  |141     |2       |-1   |0       |unknown |no     |\n",
-      "|56 |entrepreneur|divorced|primary  |no     |29     |no     |no  |cellular|29 |jan  |52      |2       |227  |1       |failure |no     |\n",
-      "|36 |services    |married |tertiary |no     |0      |yes    |no  |cellular|8  |may  |52      |1       |-1   |0       |unknown |no     |\n",
-      "+---+------------+--------+---------+-------+-------+-------+----+--------+---+-----+--------+--------+-----+--------+--------+-------+\n",
+      "+---+------------+--------+---------+-------+-------+-------+----+---------+---+-----+--------+--------+-----+--------+--------+-------+\n",
+      "|age|job         |marital |education|default|balance|housing|loan|contact  |day|month|duration|campaign|pdays|previous|poutcome|deposit|\n",
+      "+---+------------+--------+---------+-------+-------+-------+----+---------+---+-----+--------+--------+-----+--------+--------+-------+\n",
+      "|46 |blue-collar |married |primary  |no     |-44    |no     |yes |telephone|22 |aug  |16      |13      |-1   |0       |unknown |no     |\n",
+      "|30 |management  |single  |tertiary |no     |5561   |yes    |no  |cellular |27 |feb  |195     |1       |100  |1       |success |yes    |\n",
+      "|55 |entrepreneur|divorced|primary  |no     |29     |no     |no  |unknown  |16 |jun  |500     |1       |-1   |0       |unknown |no     |\n",
+      "|36 |admin.      |married |secondary|no     |542    |yes    |no  |unknown  |18 |jun  |604     |6       |-1   |0       |unknown |no     |\n",
+      "|34 |admin.      |single  |secondary|no     |6979   |yes    |no  |cellular |15 |may  |14      |5       |-1   |0       |unknown |no     |\n",
+      "|60 |retired     |divorced|tertiary |no     |380    |no     |no  |cellular |21 |jul  |219     |1       |-1   |0       |unknown |no     |\n",
+      "|34 |entrepreneur|married |tertiary |no     |842    |yes    |no  |cellular |6  |may  |141     |2       |-1   |0       |unknown |no     |\n",
+      "|25 |student     |single  |secondary|no     |304    |no     |no  |cellular |26 |may  |226     |2       |-1   |0       |unknown |yes    |\n",
+      "|36 |management  |married |tertiary |no     |6641   |no     |no  |cellular |30 |jul  |105     |4       |-1   |0       |unknown |no     |\n",
+      "|29 |management  |single  |tertiary |no     |1170   |no     |no  |cellular |20 |apr  |453     |1       |-1   |0       |unknown |yes    |\n",
+      "+---+------------+--------+---------+-------+-------+-------+----+---------+---+-----+--------+--------+-----+--------+--------+-------+\n",
       "only showing top 10 rows\n",
       "\n"
      ]
@@ -260,16 +260,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
