--- a/hadoop/spark/OULAD_analytics.ipynb
+++ b/hadoop/spark/OULAD_analytics.ipynb
@@ -392,15 +392,7 @@
     "\n",
     "**Explanation:** We want to find students whose score is above the average score for their respective courses. \n",
     "\n",
-    "This will require calculating the average score for each course and then filtering the students accordingly.\n",
-    "\n",
-    "**`SELECT sa.id_student, sa.score`**\n",
-    "\n",
-    "**`FROM studentAssessment sa`**\n",
-    "\n",
-    "**`JOIN studentRegistration sr ON sa.id_student = sr.id_student`**\n",
-    "\n",
-    "**`WHERE sa.score > (SELECT AVG(score) FROM studentAssessment WHERE code_module = sr.code_module)`**\n"
+    "This will require calculating the average score for each course and then filtering the students accordingly."
    ]
   },
   {
@@ -490,6 +482,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Part 1: Student average by Course"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 31,
    "metadata": {},
@@ -545,6 +544,13 @@
     "\n",
     "avg_scores_df = spark.sql(sqlq)\n",
     "avg_scores_df.show(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Part 2: Average Course"
    ]
   },
   {
@@ -604,6 +610,13 @@
     "\n",
     "avg_scores_df = spark.sql(sqlq)\n",
     "avg_scores_df.show(20)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Part 3: Average student > Average course"
    ]
   },
   {
@@ -673,154 +686,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "student_assessment_df.createOrReplaceTempView(\"student_assessment\")\n",
-    "student_registration_df.createOrReplaceTempView(\"student_registration\")\n",
-    "\n",
-    "sqlq = '''\n",
-    "with avg_scores as (\n",
-    "        SELECT s.code_module, s.code_presentation ,  AVG(a.score) AS avg_score\n",
-    "        FROM student_assessment a\n",
-    "        JOIN student_registration s ON a.id_student = s.id_student\n",
-    "        GROUP BY s.code_module, s.code_presentation\n",
-    ")\n",
-    "\n",
-    "select sr.code_module, sr.code_presentation, sr.id_student, as.avg_score\n",
-    "from student_registration sr\n",
-    "join avg_scores as\n",
-    "on sr.code_module = as.code_module and sr.code_presentation = as.code_presentation \n",
-    "where date_unregistration is null and \n",
-    "\n",
-    ";\n",
-    "'''\n",
-    "\n",
-    "avg_scores_df = spark.sql(sqlq)\n",
-    "avg_scores_df.show(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "+-----------+-----------------+-----------------+\n",
-      "|code_module|code_presentation|        avg_score|\n",
-      "+-----------+-----------------+-----------------+\n",
-      "|        FFF|            2013J|76.69445366987712|\n",
-      "|        BBB|            2013J|78.68632312537693|\n",
-      "|        BBB|            2014J|66.94286420974524|\n",
-      "|        EEE|            2014J|79.57708659655404|\n",
-      "|        BBB|            2014B|78.60993044822257|\n",
-      "|        GGG|            2014B|79.49848392965434|\n",
-      "|        DDD|            2013J|69.90850417615793|\n",
-      "|        AAA|            2014J|68.75673981191223|\n",
-      "|        DDD|            2014J| 71.4885775862069|\n",
-      "|        GGG|            2013J|79.93120233652442|\n",
-      "+-----------+-----------------+-----------------+\n",
-      "only showing top 10 rows\n",
-      "\n"
+      "                                                                                \r"
      ]
-    }
-   ],
-   "source": [
-    "student_assessment_df.createOrReplaceTempView(\"student_assessment\")\n",
-    "student_registration_df.createOrReplaceTempView(\"student_registration\")\n",
-    "\n",
-    "sqlq = '''\n",
-    "        SELECT s.code_module, s.code_presentation ,  AVG(a.score) AS avg_score\n",
-    "        FROM student_assessment a\n",
-    "        JOIN student_registration s ON a.id_student = s.id_student\n",
-    "        GROUP BY s.code_module, s.code_presentation\n",
-    ";\n",
-    "'''\n",
-    "\n",
-    "avg_scores_df = spark.sql(sqlq)\n",
-    "avg_scores_df.show(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "'''with stud_avg_scores_by_courses as (\n",
-    "    SELECT s.code_module, s.code_presentation, s.id_student,  AVG(a.score) AS stud_avg_score\n",
-    "        FROM student_assessment a\n",
-    "        JOIN student_registration s ON a.id_student = s.id_student\n",
-    "        GROUP BY s.code_module, s.code_presentation, s.id_student\n",
-    "        order by s.code_module, s.code_presentation\n",
-    "), course_avg_scores as (\n",
-    "    select sabc.code_module, sabc.code_presentation, avg(sabc.stud_avg_score) as course_avg_score\n",
-    "    from stud_avg_scores_by_courses sabc\n",
-    "    group by sabc.code_module, sabc.code_presentation\n",
-    ")\n",
-    "select cas.code_module, cas.code_presentation, sabc.id_student, sabc.stud_avg_score,  cas.course_avg_score\n",
-    "from stud_avg_scores_by_courses sabc\n",
-    "join course_avg_scores cas\n",
-    "on sabc.code_module = cas.code_module and sabc.code_presentation = cas.code_presentation\n",
-    "where sabc.stud_avg_score > cas.course_avg_score;'''"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pyspark.sql import functions as F\n",
-    "\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+----------+-----------+-----+-----------------+\n",
-      "|id_student|code_module|score|        avg_score|\n",
-      "+----------+-----------+-----+-----------------+\n",
-      "|     29764|        CCC|   92|74.83643552311436|\n",
-      "|     29820|        CCC|  100|74.83643552311436|\n",
-      "|     40604|        CCC|   90|74.83643552311436|\n",
-      "|     42638|        CCC|   84|74.83643552311436|\n",
-      "|     46605|        CCC|   98|74.83643552311436|\n",
-      "|     49119|        CCC|   98|74.83643552311436|\n",
-      "|     51576|        CCC|   92|74.83643552311436|\n",
-      "|     51576|        CCC|   92|74.83643552311436|\n",
-      "|     64296|        CCC|   92|74.83643552311436|\n",
-      "|     66254|        CCC|   80|74.83643552311436|\n",
-      "|     69703|        CCC|   88|74.83643552311436|\n",
-      "|     70381|        CCC|   86|74.83643552311436|\n",
-      "|     75454|        CCC|   82|74.83643552311436|\n",
-      "|     82575|        CCC|   96|74.83643552311436|\n",
-      "|     83219|        CCC|   84|74.83643552311436|\n",
-      "|     95906|        CCC|   98|74.83643552311436|\n",
-      "|    107339|        CCC|   90|74.83643552311436|\n",
-      "|    116518|        CCC|   86|74.83643552311436|\n",
-      "|    117232|        CCC|   92|74.83643552311436|\n",
-      "|    124193|        CCC|   94|74.83643552311436|\n",
-      "+----------+-----------+-----+-----------------+\n",
+      "+-----------+-----------------+----------+-----------------+-----------------+\n",
+      "|code_module|code_presentation|id_student|   stud_avg_score| course_avg_score|\n",
+      "+-----------+-----------------+----------+-----------------+-----------------+\n",
+      "|        AAA|            2013J|     62155|             76.0|68.70252976190477|\n",
+      "|        AAA|            2013J|    319047|             78.4|68.70252976190477|\n",
+      "|        AAA|            2014J|    375260|             71.4|67.75304570807913|\n",
+      "|        BBB|            2013B|   2380539|             82.1|77.01329487886625|\n",
+      "|        BBB|            2013B|    298476|81.63636363636364|77.01329487886625|\n",
+      "|        BBB|            2013B|    340831|85.83333333333333|77.01329487886625|\n",
+      "|        BBB|            2013B|    558689|             80.6|77.01329487886625|\n",
+      "|        BBB|            2013J|    546941|81.63636363636364|76.85449436782734|\n",
+      "|        BBB|            2013J|    568609|             84.6|76.85449436782734|\n",
+      "|        BBB|            2013J|   2115711|             85.6|76.85449436782734|\n",
+      "|        BBB|            2014B|    621301|             84.2| 76.9498548327345|\n",
+      "|        BBB|            2014B|    622505|86.36363636363636| 76.9498548327345|\n",
+      "|        BBB|            2014B|    634286|77.81818181818181| 76.9498548327345|\n",
+      "|        BBB|            2014B|    634481|81.36363636363636| 76.9498548327345|\n",
+      "|        BBB|            2014J|     47891|65.66666666666667|64.85704275743726|\n",
+      "|        BBB|            2014J|    485853|            100.0|64.85704275743726|\n",
+      "|        GGG|            2013J|    610405|             86.0|77.93457572407263|\n",
+      "|        BBB|            2014J|    630286|            100.0|64.85704275743726|\n",
+      "|        BBB|            2014J|    643321|             84.4|64.85704275743726|\n",
+      "|        CCC|            2014B|    134025|87.27777777777777|68.43857689587726|\n",
+      "+-----------+-----------------+----------+-----------------+-----------------+\n",
       "only showing top 20 rows\n",
       "\n"
      ]
@@ -829,21 +732,18 @@
    "source": [
     "from pyspark.sql import functions as F\n",
     "\n",
-    "# Step 1: Join student_assessment_df with student_registration_df to include 'code_module' in the assessment\n",
-    "joined_df = student_assessment_df.join(student_registration_df, \"id_student\", \"inner\")\n",
+    "stud_avg_scores_by_courses = student_assessment_df\\\n",
+    "    .join(student_registration_df,\"id_student\")\\\n",
+    "    .groupBy(\"code_module\", \"code_presentation\", \"id_student\")\\\n",
+    "    .agg(F.avg(\"score\").alias(\"stud_avg_score\"))\n",
     "\n",
-    "# Step 2: Calculate the average score per course (code_module)\n",
-    "avg_score_per_course_df = joined_df.groupBy(\"code_module\") \\\n",
-    "                                   .agg(F.avg(\"score\").alias(\"avg_score\"))\n",
+    "course_avg_scores = stud_avg_scores_by_courses.groupBy(\"code_module\", \"code_presentation\")\\\n",
+    "    .agg(F.avg(\"stud_avg_score\").alias(\"course_avg_score\"))\n",
     "\n",
-    "# Step 3: Join the joined DataFrame with the average score DataFrame to get the avg_score\n",
-    "final_df = joined_df.join(avg_score_per_course_df, on=\"code_module\", how=\"inner\")\n",
+    "higher_student = stud_avg_scores_by_courses.join(course_avg_scores, [\"code_module\", \"code_presentation\"])\\\n",
+    "    .filter(F.col(\"stud_avg_score\") > F.col(\"course_avg_score\"))\n",
     "\n",
-    "# Step 4: Filter students whose scores are above the average for their course\n",
-    "above_avg_df = final_df.filter(final_df.score > final_df.avg_score)\n",
-    "\n",
-    "# Step 5: Show the result\n",
-    "above_avg_df.select(\"id_student\", \"code_module\", \"score\", \"avg_score\").show()\n"
+    "higher_student.show()"
    ]
   },
   {
