--- a/hadoop/spark.ipynb
+++ b/hadoop/spark.ipynb
@@ -205,6 +205,13 @@
       "                     +- Scan ExistingRDD[id#12L,name#13,department#14,salary#15L]\n",
       "\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "25/02/02 15:00:40 WARN NettyRpcEnv: Ignored failure: java.util.concurrent.TimeoutException: Cannot receive any reply from 192.168.1.253:34613 in 10000 milliseconds\n"
+     ]
     }
    ],
    "source": [
@@ -242,114 +249,31 @@
    "source": [
     "## 13. What is the importance of repartition?\n",
     "Repartitioning redistributes data across partitions, which can:\n",
-    "- **Improve performance**: By balancing the data across **ALL** nodes, reducing skew.\n",
+    "- **Improve performance**: By balancing the data across nodes, reducing skew.\n",
     "- **Optimize parallelism**: Ensures a better workload distribution.\n",
     "- **Avoid shuffling**: Proper partitioning can prevent unnecessary shuffling and improve job performance.\n",
-    "\n",
-    "When to use ?\n",
-    "\n",
-    "- If your job has a `large dataset` and you want `to split` it into more partitions to utilize `all available cores` in your cluster.\n",
-    "- Before `groupByKey`, `Join` to prevent expensive shuffling\n",
     "\n",
     "---\n",
     "\n",
     "## 14. Describe a use case for map and another for mapPartitions.\n",
     "- **map**: Use `map` when you need to apply a function to each element in an RDD/DataFrame independently. Example: Squaring each number in a dataset.\n",
-    "- **mapPartitions**: Use `mapPartitions` when you want to apply a function to each partition of data, not on all the rdd\n",
-    "Useful for operations that benefit from batch processing, such as aggregations \n",
-    "\n",
+    "- **mapPartitions**: Use `mapPartitions` when you want to apply a function to each partition of data. It’s more efficient for operations that require access to the entire partition (e.g., accessing a database connection per partition).\n",
     "\n",
     "---\n",
     "\n",
     "## 15. Is there a parallel for SQL constraints in Spark? What about indexes? If yes - what is it? If no - why?\n",
-    "- **SQL Constraints**: Spark SQL does `not support` SQL constraints like `PRIMARY KEY` or `FOREIGN KEY`\n",
-    "- **Indexes**: Spark does not support traditional indexes like in relational databases. \n",
-    "\n",
-    "However, performance can be optimized with partitioning, bucketing, and using the appropriate storage formats (e.g., Parquet).\n",
+    "- **SQL Constraints**: Spark SQL does not support SQL constraints like `PRIMARY KEY` or `FOREIGN KEY`. It focuses on distributed processing and does not enforce data integrity constraints.\n",
+    "- **Indexes**: Spark does not support traditional indexes like in relational databases. However, performance can be optimized with partitioning, bucketing, and using the appropriate storage formats (e.g., Parquet).\n",
     "\n",
     "---\n",
     "\n",
     "## 16. Why and when are `lit` and `col` useful?\n",
     "- **lit**: Used to create a column of constant values (e.g., `lit(10)` to create a column with the value `10`).\n",
     "- **col**: Used to refer to a column in DataFrame operations (e.g., `col('age')` to reference the \"age\" column).\n",
-    "- These functions are useful in DataFrame transformations and operations.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+---+-------+---+-------+\n",
-      "| id|   name|age|country|\n",
-      "+---+-------+---+-------+\n",
-      "|  1|  Alice| 25|    USA|\n",
-      "|  2|    Bob| 30|    USA|\n",
-      "|  3|Charlie| 35|    USA|\n",
-      "+---+-------+---+-------+\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+-------+---------+\n",
-      "|   name|(age * 2)|\n",
-      "+-------+---------+\n",
-      "|  Alice|       50|\n",
-      "|    Bob|       60|\n",
-      "|Charlie|       70|\n",
-      "+-------+---------+\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "25/02/02 15:00:38 WARN NettyRpcEnv: Ignored failure: java.util.concurrent.TimeoutException: Cannot receive any reply from 10.10.1.44:33349 in 10000 milliseconds\n"
-     ]
-    }
-   ],
-   "source": [
-    "from pyspark.sql import SparkSession\n",
-    "from pyspark.sql.functions import lit, col\n",
+    "- These functions are useful in DataFrame transformations and operations.\n",
     "\n",
-    "# Initialize Spark Session\n",
-    "spark = SparkSession.builder.appName(\"lit_col_example\").getOrCreate()\n",
+    "---\n",
     "\n",
-    "# Sample DataFrame\n",
-    "df = spark.createDataFrame([\n",
-    "    (1, \"Alice\", 25),\n",
-    "    (2, \"Bob\", 30),\n",
-    "    (3, \"Charlie\", 35)\n",
-    "], [\"id\", \"name\", \"age\"])\n",
-    "\n",
-    "# Add a constant column using `lit`\n",
-    "df_with_constant = df.withColumn(\"country\", lit(\"USA\"))\n",
-    "df_with_constant.show()\n",
-    "\n",
-    "df_with_constant = df.select(col(\"name\"), col(\"age\") * 2)\n",
-    "\n",
-    "df_with_constant.show()\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## 17. What is the difference between parquet files and CSV files?\n",
     "- **Parquet**:\n",
     "  - Columnar format, optimized for storage and querying.\n",
@@ -365,7 +289,7 @@
     "## 18. Can we read data directly from a JSON file using Spark? How? Why would we do that?\n",
     "Yes, Spark can read data from a JSON file using the `spark.read.json()` method:\n",
     "```python\n",
-    "df = spark.read.json(\"path_to_json_file\")"
+    "df = spark.read.json(\"path_to_json_file\")\n"
    ]
   },
   {
