--- a/hadoop/spark/OULAD_analytics.ipynb
+++ b/hadoop/spark/OULAD_analytics.ipynb
@@ -2,61 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spark.stop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "root\n",
-      " |-- id_assessment: integer (nullable = true)\n",
-      " |-- id_student: integer (nullable = true)\n",
-      " |-- date_submitted: integer (nullable = true)\n",
-      " |-- is_banked: integer (nullable = true)\n",
-      " |-- score: integer (nullable = true)\n",
-      "\n",
-      "root\n",
-      " |-- code_module: string (nullable = true)\n",
-      " |-- code_presentation: string (nullable = true)\n",
-      " |-- id_student: integer (nullable = true)\n",
-      " |-- date_registration: integer (nullable = true)\n",
-      " |-- date_unregistration: integer (nullable = true)\n",
-      "\n",
-      "root\n",
-      " |-- code_module: string (nullable = true)\n",
-      " |-- code_presentation: string (nullable = true)\n",
-      " |-- id_student: integer (nullable = true)\n",
-      " |-- gender: string (nullable = true)\n",
-      " |-- region: string (nullable = true)\n",
-      " |-- highest_education: string (nullable = true)\n",
-      " |-- imd_band: string (nullable = true)\n",
-      " |-- age_band: string (nullable = true)\n",
-      " |-- num_of_prev_attempts: integer (nullable = true)\n",
-      " |-- studied_credits: integer (nullable = true)\n",
-      " |-- disability: string (nullable = true)\n",
-      " |-- final_result: string (nullable = true)\n",
-      "\n",
-      "root\n",
-      " |-- id_site: integer (nullable = true)\n",
-      " |-- code_module: string (nullable = true)\n",
-      " |-- code_presentation: string (nullable = true)\n",
-      " |-- activity_type: string (nullable = true)\n",
-      " |-- week_from: integer (nullable = true)\n",
-      " |-- week_to: integer (nullable = true)\n",
-      "\n",
-      "root\n",
-      " |-- code_module: string (nullable = true)\n",
-      " |-- code_presentation: string (nullable = true)\n",
-      " |-- module_presentation_length: integer (nullable = true)\n",
-      "\n"
+      "Current working directory: /home/studen/mickael/python_data_engineer/hadoop/spark  abs_path: OULAD dataset/studentAssessment.csv\n"
+     ]
+    },
+    {
+     "ename": "AnalysisException",
+     "evalue": "[PATH_NOT_FOUND] Path does not exist: hdfs://localhost:9000/user/studen/OULAD dataset/studentAssessment.csv.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAnalysisException\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[9], line 29\u001b[0m\n\u001b[1;32m     26\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m     28\u001b[0m \u001b[38;5;66;03m# Load the datasets\u001b[39;00m\n\u001b[0;32m---> 29\u001b[0m student_assessment_df \u001b[38;5;241m=\u001b[39m \u001b[43mload_csv\u001b[49m\u001b[43m(\u001b[49m\u001b[43mstudent_assessment_path\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     30\u001b[0m student_registration_df \u001b[38;5;241m=\u001b[39m load_csv(student_registration_path)\n\u001b[1;32m     31\u001b[0m student_info_df \u001b[38;5;241m=\u001b[39m load_csv(student_info_path)\n",
+      "Cell \u001b[0;32mIn[9], line 23\u001b[0m, in \u001b[0;36mload_csv\u001b[0;34m(file_path)\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCurrent working directory:\u001b[39m\u001b[38;5;124m\"\u001b[39m, os\u001b[38;5;241m.\u001b[39mgetcwd(), \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m abs_path:\u001b[39m\u001b[38;5;124m\"\u001b[39m, abs_path)\n\u001b[1;32m     22\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mexists(abs_path):\n\u001b[0;32m---> 23\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mspark\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcsv\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43mf\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mabs_path\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mheader\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minferSchema\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[1;32m     24\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m     25\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFile \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile_path\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m not found.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "File \u001b[0;32m~/.local/lib/python3.8/site-packages/pyspark/sql/readwriter.py:740\u001b[0m, in \u001b[0;36mDataFrameReader.csv\u001b[0;34m(self, path, schema, sep, encoding, quote, escape, comment, header, inferSchema, ignoreLeadingWhiteSpace, ignoreTrailingWhiteSpace, nullValue, nanValue, positiveInf, negativeInf, dateFormat, timestampFormat, maxColumns, maxCharsPerColumn, maxMalformedLogPerPartition, mode, columnNameOfCorruptRecord, multiLine, charToEscapeQuoteEscaping, samplingRatio, enforceSchema, emptyValue, locale, lineSep, pathGlobFilter, recursiveFileLookup, modifiedBefore, modifiedAfter, unescapedQuoteHandling)\u001b[0m\n\u001b[1;32m    738\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mtype\u001b[39m(path) \u001b[39m==\u001b[39m \u001b[39mlist\u001b[39m:\n\u001b[1;32m    739\u001b[0m     \u001b[39massert\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_spark\u001b[39m.\u001b[39m_sc\u001b[39m.\u001b[39m_jvm \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m\n\u001b[0;32m--> 740\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_df(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_jreader\u001b[39m.\u001b[39;49mcsv(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_spark\u001b[39m.\u001b[39;49m_sc\u001b[39m.\u001b[39;49m_jvm\u001b[39m.\u001b[39;49mPythonUtils\u001b[39m.\u001b[39;49mtoSeq(path)))\n\u001b[1;32m    741\u001b[0m \u001b[39melif\u001b[39;00m \u001b[39misinstance\u001b[39m(path, RDD):\n\u001b[1;32m    743\u001b[0m     \u001b[39mdef\u001b[39;00m\u001b[39m \u001b[39m\u001b[39mfunc\u001b[39m(iterator):\n",
+      "File \u001b[0;32m~/.local/lib/python3.8/site-packages/py4j/java_gateway.py:1322\u001b[0m, in \u001b[0;36mJavaMember.__call__\u001b[0;34m(self, *args)\u001b[0m\n\u001b[1;32m   1316\u001b[0m command \u001b[39m=\u001b[39m proto\u001b[39m.\u001b[39mCALL_COMMAND_NAME \u001b[39m+\u001b[39m\\\n\u001b[1;32m   1317\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcommand_header \u001b[39m+\u001b[39m\\\n\u001b[1;32m   1318\u001b[0m     args_command \u001b[39m+\u001b[39m\\\n\u001b[1;32m   1319\u001b[0m     proto\u001b[39m.\u001b[39mEND_COMMAND_PART\n\u001b[1;32m   1321\u001b[0m answer \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mgateway_client\u001b[39m.\u001b[39msend_command(command)\n\u001b[0;32m-> 1322\u001b[0m return_value \u001b[39m=\u001b[39m get_return_value(\n\u001b[1;32m   1323\u001b[0m     answer, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mgateway_client, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mtarget_id, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mname)\n\u001b[1;32m   1325\u001b[0m \u001b[39mfor\u001b[39;00m temp_arg \u001b[39min\u001b[39;00m temp_args:\n\u001b[1;32m   1326\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mhasattr\u001b[39m(temp_arg, \u001b[39m\"\u001b[39m\u001b[39m_detach\u001b[39m\u001b[39m\"\u001b[39m):\n",
+      "File \u001b[0;32m~/.local/lib/python3.8/site-packages/pyspark/errors/exceptions/captured.py:185\u001b[0m, in \u001b[0;36mcapture_sql_exception.<locals>.deco\u001b[0;34m(*a, **kw)\u001b[0m\n\u001b[1;32m    181\u001b[0m converted \u001b[39m=\u001b[39m convert_exception(e\u001b[39m.\u001b[39mjava_exception)\n\u001b[1;32m    182\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39misinstance\u001b[39m(converted, UnknownException):\n\u001b[1;32m    183\u001b[0m     \u001b[39m# Hide where the exception came from that shows a non-Pythonic\u001b[39;00m\n\u001b[1;32m    184\u001b[0m     \u001b[39m# JVM exception message.\u001b[39;00m\n\u001b[0;32m--> 185\u001b[0m     \u001b[39mraise\u001b[39;00m converted \u001b[39mfrom\u001b[39;00m\u001b[39m \u001b[39m\u001b[39mNone\u001b[39;00m\n\u001b[1;32m    186\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m    187\u001b[0m     \u001b[39mraise\u001b[39;00m\n",
+      "\u001b[0;31mAnalysisException\u001b[0m: [PATH_NOT_FOUND] Path does not exist: hdfs://localhost:9000/user/studen/OULAD dataset/studentAssessment.csv."
      ]
     }
    ],
@@ -73,12 +50,16 @@
     "student_info_path = \"studentInfo.csv\"\n",
     "vle_path = \"vle.csv\"\n",
     "courses_path = \"courses.csv\"\n",
+    "assessments_path = \"assessments.csv\"\n",
     "\n",
     "# Function to check file existence and get absolute path\n",
     "def load_csv(file_path):\n",
     "    # abs_path = os.path.abspath(file_path)\n",
-    "    abs_path = f\"oulad/{file_path}\"\n",
-    "    if os.path.exists(f\"../{abs_path}\"):\n",
+    "    abs_path = f\"OULAD dataset/{file_path}\"\n",
+    "    # print the current working directory\n",
+    "    print(\"Current working directory:\", os.getcwd(), \" abs_path:\", abs_path)\n",
+    "\n",
+    "    if os.path.exists(abs_path):\n",
     "        return spark.read.csv(f\"{abs_path}\", header=True, inferSchema=True)\n",
     "    else:\n",
     "        print(f\"File {file_path} not found.\")\n",
@@ -90,13 +71,15 @@
     "student_info_df = load_csv(student_info_path)\n",
     "vle_df = load_csv(vle_path)\n",
     "courses_df = load_csv(courses_path)\n",
+    "# assessments_df = load_csv(assessments_path)\n",
     "\n",
     "# Show schema of one of the dataframes to inspect structure\n",
     "student_assessment_df.printSchema()\n",
     "student_registration_df.printSchema()\n",
     "student_info_df.printSchema()\n",
     "vle_df.printSchema()\n",
-    "courses_df.printSchema()\n"
+    "courses_df.printSchema()\n",
+    "# assessments_df.printSchema()\n"
    ]
   },
   {
@@ -1283,7 +1266,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.10 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -1297,7 +1280,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.8.10"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+   }
   }
  },
  "nbformat": 4,
