--- a/hadoop/spark/OULAD+pyspark+sql.ipynb
+++ b/hadoop/spark/OULAD+pyspark+sql.ipynb
@@ -10,11 +10,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "25/02/11 16:46:01 WARN Utils: Your hostname, student-HP-EliteDesk-800-G1-SFF resolves to a loopback address: 127.0.1.1; using 10.1.0.172 instead (on interface eno1)\n",
-      "25/02/11 16:46:01 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "25/02/11 22:04:45 WARN Utils: Your hostname, mickael resolves to a loopback address: 127.0.1.1; using 192.168.1.253 instead (on interface wlp2s0)\n",
+      "25/02/11 22:04:45 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "25/02/11 16:46:03 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "25/02/11 22:04:46 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     }
    ],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "5e6348b7-dba7-42d0-8262-5b2474a4922d",
    "metadata": {},
    "outputs": [
@@ -43,16 +43,16 @@
     }
    ],
    "source": [
-    "data_courses = spark.read.csv(\"file:///home/studen/mickael/python_data_engineer/hadoop/spark/OULAD dataset/courses.csv\", header=True, inferSchema=True)\n",
-    "data_assessments = spark.read.csv(\"file:///home/studen/mickael/python_data_engineer/hadoop/spark/OULAD dataset/assessments.csv\", header=True, inferSchema=True)\n",
-    "data_studentAssessment = spark.read.csv(\"file:///home/studen/mickael/python_data_engineer/hadoop/spark/OULAD dataset/studentAssessment.csv\", header=True, inferSchema=True)\n",
-    "data_studentInfo = spark.read.csv(\"file:///home/studen/mickael/python_data_engineer/hadoop/spark/OULAD dataset/studentInfo.csv\", header=True, inferSchema=True)\n",
-    "data_studentRegistration = spark.read.csv(\"file:///home/studen/mickael/python_data_engineer/hadoop/spark/OULAD dataset/studentRegistration.csv\", header=True, inferSchema=True)"
+    "data_courses = spark.read.csv(\"file:///home/mickael/data_engineer/hadoop/oulad/courses.csv\", header=True, inferSchema=True)\n",
+    "data_assessments = spark.read.csv(\"file:///home/mickael/data_engineer/hadoop/oulad/assessments.csv\", header=True, inferSchema=True)\n",
+    "data_studentAssessment = spark.read.csv(\"file:///home/mickael/data_engineer/hadoop/oulad/studentAssessment.csv\", header=True, inferSchema=True)\n",
+    "data_studentInfo = spark.read.csv(\"file:///home/mickael/data_engineer/hadoop/oulad/studentInfo.csv\", header=True, inferSchema=True)\n",
+    "data_studentRegistration = spark.read.csv(\"file:///home/mickael/data_engineer/hadoop/oulad/studentRegistration.csv\", header=True, inferSchema=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 12,
    "id": "e65cfa28",
    "metadata": {},
    "outputs": [
@@ -66,10 +66,8 @@
       "|        AAA|            2013J|                       268|\n",
       "|        AAA|            2014J|                       269|\n",
       "|        BBB|            2013J|                       268|\n",
-      "|        BBB|            2014J|                       262|\n",
-      "|        BBB|            2013B|                       240|\n",
       "+-----------+-----------------+--------------------------+\n",
-      "only showing top 5 rows\n",
+      "only showing top 3 rows\n",
       "\n",
       "+-----------+-----------------+-------------+---------------+----+------+\n",
       "|code_module|code_presentation|id_assessment|assessment_type|date|weight|\n",
@@ -79,15 +77,25 @@
       "|        AAA|            2013J|         1754|            TMA| 117|  20.0|\n",
       "|        AAA|            2013J|         1755|            TMA| 166|  20.0|\n",
       "|        AAA|            2013J|         1756|            TMA| 215|  30.0|\n",
+      "|        AAA|            2013J|         1757|           Exam|NULL| 100.0|\n",
+      "|        AAA|            2014J|         1758|            TMA|  19|  10.0|\n",
+      "|        AAA|            2014J|         1759|            TMA|  54|  20.0|\n",
+      "|        AAA|            2014J|         1760|            TMA| 117|  20.0|\n",
+      "|        AAA|            2014J|         1761|            TMA| 166|  20.0|\n",
+      "|        AAA|            2014J|         1762|            TMA| 215|  30.0|\n",
+      "|        AAA|            2014J|         1763|           Exam|NULL| 100.0|\n",
+      "|        BBB|            2013B|        14991|            CMA|  54|   1.0|\n",
+      "|        BBB|            2013B|        14992|            CMA|  89|   1.0|\n",
+      "|        BBB|            2013B|        14993|            CMA| 124|   1.0|\n",
       "+-----------+-----------------+-------------+---------------+----+------+\n",
-      "only showing top 5 rows\n",
+      "only showing top 15 rows\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "data_courses.show(5)\n",
-    "data_assessments.show(5)"
+    "data_courses.show(3)\n",
+    "data_assessments.show(15)"
    ]
   },
   {
@@ -725,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "id": "64188d30",
    "metadata": {},
    "outputs": [
@@ -747,26 +755,26 @@
       "+-------------+---------+-------------+----------+--------------+---------+-----+\n",
       "|id_assessment|max_score|id_assessment|id_student|date_submitted|is_banked|score|\n",
       "+-------------+---------+-------------+----------+--------------+---------+-----+\n",
-      "|         1752|       94|         1752|     11391|            18|        0|   78|\n",
-      "|         1752|       94|         1752|     28400|            22|        0|   70|\n",
-      "|         1752|       94|         1752|     31604|            17|        0|   72|\n",
-      "|         1752|       94|         1752|     32885|            26|        0|   69|\n",
-      "|         1752|       94|         1752|     38053|            19|        0|   79|\n",
-      "|         1752|       94|         1752|     45462|            20|        0|   70|\n",
-      "|         1752|       94|         1752|     45642|            18|        0|   72|\n",
-      "|         1752|       94|         1752|     52130|            19|        0|   72|\n",
-      "|         1752|       94|         1752|     53025|             9|        0|   71|\n",
-      "|         1752|       94|         1752|     57506|            18|        0|   68|\n",
-      "|         1752|       94|         1752|     58873|            19|        0|   73|\n",
-      "|         1752|       94|         1752|     59185|            18|        0|   67|\n",
-      "|         1752|       94|         1752|     62155|            17|        0|   73|\n",
-      "|         1752|       94|         1752|     63400|            19|        0|   83|\n",
-      "|         1752|       94|         1752|     65002|            17|        0|   66|\n",
-      "|         1752|       94|         1752|     70464|            19|        0|   59|\n",
-      "|         1752|       94|         1752|     71361|            19|        0|   82|\n",
-      "|         1752|       94|         1752|     74372|            22|        0|   60|\n",
-      "|         1752|       94|         1752|     75091|            18|        0|   67|\n",
-      "|         1752|       94|         1752|     77367|            18|        0|   73|\n",
+      "|         1752|       94|         1752|   2555340|            18|        0|   94|\n",
+      "|         1753|       95|         1753|    296332|            52|        0|   95|\n",
+      "|         1754|       95|         1754|   2458355|           117|        0|   95|\n",
+      "|         1755|       94|         1755|    376439|           166|        0|   94|\n",
+      "|         1755|       94|         1755|   2694424|           162|        0|   94|\n",
+      "|         1756|       98|         1756|   2536991|           215|        0|   98|\n",
+      "|         1758|       90|         1758|   2010232|            19|        0|   90|\n",
+      "|         1758|       90|         1758|    248581|            19|        0|   90|\n",
+      "|         1758|       90|         1758|    439305|            23|        0|   90|\n",
+      "|         1759|       95|         1759|    342007|            58|        0|   95|\n",
+      "|         1760|       94|         1760|    485962|           117|        0|   94|\n",
+      "|         1761|       92|         1761|    527100|           165|        0|   92|\n",
+      "|         1762|       95|         1762|    527100|           215|        0|   95|\n",
+      "|        14984|       99|        14984|    561161|            18|        0|   99|\n",
+      "|        14985|      100|        14985|   2617596|            47|        0|  100|\n",
+      "|        14986|      100|        14986|   1436591|            75|        0|  100|\n",
+      "|        14986|      100|        14986|   2236738|            89|        0|  100|\n",
+      "|        14987|      100|        14987|   1436591|           120|        0|  100|\n",
+      "|        14987|      100|        14987|    484933|           122|        0|  100|\n",
+      "|        14988|      100|        14988|   1436591|           155|        0|  100|\n",
       "+-------------+---------+-------------+----------+--------------+---------+-----+\n",
       "only showing top 20 rows\n",
       "\n"
@@ -779,7 +787,10 @@
     "\n",
     "max_scores.show(5)\n",
     "\n",
-    "max_scores.join(data_studentAssessment, data_studentAssessment.id_assessment == max_scores.id_assessment).show() "
+    "max_scores.join(data_studentAssessment, \n",
+    "    (data_studentAssessment.id_assessment == max_scores.id_assessment)\n",
+    "    & (data_studentAssessment.score == max_scores.max_score)\n",
+    "    ).show() "
    ]
   },
   {
@@ -787,22 +798,57 @@
    "id": "3a1cd79a",
    "metadata": {},
    "source": [
-    "Calculate the overall average score of students who passed.\n",
-    "Find courses where more than 50% of students passed.\n",
-    "Find students with a final result of ‘Distinction’ but never submitted an assessment.\n",
-    "Find assessments where more than 80% of students scored below 50.\n",
-    "Find students who submitted the same assessment multiple times.\n",
-    "Find courses with the highest dropout rate.\n",
-    "Calculate the number of interactions (clicks) per student.\n",
-    "Find the median score per module.\n",
-    "Calculate submission delay patterns.\n",
-    "Compare performance across age bands."
+    "### 3. Calculate the overall average score of students who passed.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "64075724",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------+-----------------+\n",
+      "|id_assessment|       avg(score)|\n",
+      "+-------------+-----------------+\n",
+      "|        24299|78.56521739130434|\n",
+      "|        25340|67.14973262032086|\n",
+      "|        24290|79.94405594405595|\n",
+      "|        25354|72.13026315789473|\n",
+      "|        25361|75.16247139588101|\n",
+      "|        25368|71.98863636363636|\n",
+      "+-------------+-----------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "data_studentAssessment.join(data_assessments, data_studentAssessment.id_assessment == data_assessments.id_assessment).filter((data_assessments.assessment_type == \"Exam\") & (data_studentAssessment.score > 50)).groupby(data_assessments.id_assessment).agg({\"score\": \"avg\"}).show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bd28acb1",
+   "metadata": {},
+   "source": [
+    "### 4. Find courses where more than 50% of students passed.\n",
+    "### 5. Find students with a final result of ‘Distinction’ but never submitted an assessment.\n",
+    "### 6. Find assessments where more than 80% of students scored below 50.\n",
+    "### 7. Find students who submitted the same assessment multiple times.\n",
+    "### 8. Find courses with the highest dropout rate.\n",
+    "### 9. Calculate the number of interactions (clicks) per student.\n",
+    "### 10. Find the median score per module.\n",
+    "### 11. Calculate submission delay patterns.\n",
+    "### 12. Compare performance across age bands."
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -816,12 +862,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
-   }
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
